# chatbot_api

./: Cargo.toml  index.html  personality.json
src/: main.rs
