[package]
name = "chatbot_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.43", features = ["full", "rt-multi-thread", "process"] }
futures = "0.3"
hyper-util = { version = "0.1", features = ["tokio", "server"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
async-stream = "0.3.6"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
regex = "1.11.1"
rand = "0.8.5"
http = "0.2.11"
lazy_static = "1.5.0"
once_cell = "1.20.3"
tower-http = { version = "0.6.2", features = ["cors"] }